--- a/index.html
+++ b/index.html
@@ -11,59 +11,86 @@
 </head>
 
 <body>
-    <h1>¿Qué es Git?</h1>
-    <p>Git es un software de control de versiones gratis y de código abierto. Fue creado por Linux Torvalds en 2005. Esta herramienta es un sistema de control de versiones que fue inicialmente desarrollado para trabajar con varios desarrolladores en el núcleo
-        de linux</p>
-    <p>Esto significa básicamente que Git es un rastreador de contenido, en particular para almacenar código.</p>
-    <p>Los proyectos de la vida real generalmente tienen múltiples desarolladores trabajando en paralelo. Así que necesitan un sistema de control de versiones como Git para asegurarse de que no hay conflictos de código entre ellos.</p>
-    <p>Además, los requerimientos en este tipo de proyectos cambian constantemente. Así que un sistema de control de versiones permite a los desarrolladores revertir y regresar a una versión anteriror de su código.</p>
-    <p>El sistema de ramas en Git permite a los desarrolladores trabajar individualmente en una tarea.</p>
-    <p>Por ejemeplo:</p>
-    <ul>
-        <li>
-            <p>una rama -> una tarea</p>
-        </li>
-        <li>
-            <p>una rama -> un desarrollador</p>
-        </li>
-    </ul>
-    <p>Básicamente, se puede pensar en Git como una aplicación de software pequeña que controla tu código base, si eres un desarrollador.</p>
-    <h2>Lo esencial hasta ahora</h2>
-    <p>En resumidas cuentas de todo lo discutido hasta el momento es que Git es un sistema de control de versiones genial para versionado, administración y distribución de archivos.</p>
-    <p>Wait a minute!, si Git nos ayuda en la administración y distribucción eficaz de distintas versiones de los archivos de un protecto, <b>¿cúal es el propósito de Github?</b></p>
-    <h2>GitHub</h2>
-    <p>GitHub es una plataforma basada en la web donde los usuarios pueden alojar repositorios de Git. Facilita compartir y colaborar fácilmente en proyectos con cualquier persona en cualquier momento (repositorios Git en la web).</p>
-    <p>GitHub también fomenta una participación más amplia en proyectos de código abierto al proporcionar una manera segura de editar archivos en repositorios de otros usuarios.</p>
-    <h2>Diferencias</h2>
-    <ol>
-        <li>
-            <h3><b> Git vs. GitHub - Función principal</b></h3>
-        </li>
-        <p>Git es un sistema de control de versiones distribuido que registra las distintas versiones de un archivo (o conjunto de archivos). Le permite a los usuarios acceder, comparar, actualizar y distribuir cualquiera de las versiones registradas en
-            cualquier momento.</p>
-        <p>Sin embargo GitHub principalmente es una plataforma de alojamiento para albergar tus repositorios Git en la web. Esto permite a los usuarios mantener sus repositorios remotos privados o púlblicos para esfuerzos colaborativos.</p>
-        <li>
-            <h3><b>Diferencia 2: Git vs. GitHub - plataforma de operación</b></h3>
-        </li>
-        <p>Los usuarios instalan y ejecutan Git en sus equipos locales.</p>
-        <p>Esto significa que la mayoría de las operaciones de Git se pueden lograr sin una conexión a internet.</p>
-        <p>Sin embargo GitHub es un servicio basado en la web que opera solamente en línea. Esto significa que necesitas estar conectado para hacer cualquier cosa en GitHub.</p>
-        <li>
-            <h3><b>Git vs. GitHub - Creadores</b></h3>
-        </li>
-        <p>Linus Torvalds comenzó Git en Abril del 2005.</p>
-        <p>Chris Wanstrath, P.J. Hyett, Tom Preston-Werner, y Scott Chacon fundaron GitHub.com en Febrero 2008.</p>
-        <li>
-            <h3><b>Git vs. GitHub - Soporte/mantenimiento</b></h3>
-        </li>
-        <p>En Julio 2005, Linux Torvalds entregó el mantenimiento de Git a junio C. Hamano - quien ha dado soporte a la plataforma desde entonces.</p>
-        <p>En Octubre 2018, Microsoft compró GitHub</p>
-        <li>
-            <h3><b>Git vs. Github - Competidores</b></h3>
-        </li>
-        <p>Algunas alternativas populares para Git son Mercurial, Team Foundation Version control (TFVC), Perforce Helix Core, Apache Subversion, y IBM Rational ClearCase</p>
-        <p>Los competidores más cercanos a GitHub son <b>GitLab</b>, Bitbucket, SourceForge, Cloud Source Repositories, y AWS CodeCommit.</p>
-    </ol>
+    <div class="borde-div">
+        <h1>¿Qué es Git?</h1>
+        <div class="borde">
+            <p>Git es un software de control de versiones gratis y de código abierto. Fue creado por Linux Torvalds en 2005. Esta herramienta es un sistema de control de versiones que fue inicialmente desarrollado para trabajar con varios desarrolladores
+                en el núcleo de linux</p>
+            <p>Esto significa básicamente que Git es un rastreador de contenido, en particular para almacenar código.</p>
+            <p>Los proyectos de la vida real generalmente tienen múltiples desarolladores trabajando en paralelo. Así que necesitan un sistema de control de versiones como Git para asegurarse de que no hay conflictos de código entre ellos.</p>
+            <p>Además, los requerimientos en este tipo de proyectos cambian constantemente. Así que un sistema de control de versiones permite a los desarrolladores revertir y regresar a una versión anteriror de su código.</p>
+            <p>El sistema de ramas en Git permite a los desarrolladores trabajar individualmente en una tarea.</p>
+        </div>
+        <div>
+            <p> </p>
+        </div>
+        <div class="borde-a">
+            <p>Por ejemeplo:</p>
+            <ul class="retangulo">
+                <li>
+                    <p>una rama -> una tarea</p>
+                </li>
+                <li>
+                    <p>una rama -> un desarrollador</p>
+                </li>
+            </ul>
+            <p>Básicamente, se puede pensar en Git como una aplicación de software pequeña que controla tu código base, si eres un desarrollador.</p>
+        </div>
+        <div>
+            <p> </p>
+        </div>
+        <div class="borde-a">
+            <h2>Lo esencial hasta ahora</h2>
+            <p>En resumidas cuentas de todo lo discutido hasta el momento es que Git es un sistema de control de versiones genial para versionado, administración y distribución de archivos.</p>
+            <p>Wait a minute!, si Git nos ayuda en la administración y distribucción eficaz de distintas versiones de los archivos de un protecto, <b>¿Cúal es el propósito de Github?</b></p>
+        </div>
+        <div>
+            <P> </P>
+        </div>
+        <div class="borde-a">
+            <h2>GitHub</h2>
+            <p>GitHub es una plataforma basada en la web donde los usuarios pueden alojar repositorios de Git. Facilita compartir y colaborar fácilmente en proyectos con cualquier persona en cualquier momento (repositorios Git en la web).</p>
+            <p>GitHub también fomenta una participación más amplia en proyectos de código abierto al proporcionar una manera segura de editar archivos en repositorios de otros usuarios.</p>
+        </div>
+        <div>
+            <p> </p>
+        </div>
+        <div class="borde-a">
+            <h2>Diferencias</h2>
+            <ol>
+                <li>
+                    <h3><b> Git vs. GitHub - Función principal</b></h3>
+                </li>
+                <p>Git es un sistema de control de versiones distribuido que registra las distintas versiones de un archivo (o conjunto de archivos). Le permite a los usuarios acceder, comparar, actualizar y distribuir cualquiera de las versiones registradas
+                    en cualquier momento.</p>
+                <p>Sin embargo GitHub principalmente es una plataforma de alojamiento para albergar tus repositorios Git en la web. Esto permite a los usuarios mantener sus repositorios remotos privados o púlblicos para esfuerzos colaborativos.</p>
+                <li>
+                    <h3><b>Diferencia 2: Git vs. GitHub - plataforma de operación</b></h3>
+                </li>
+                <p>Los usuarios instalan y ejecutan Git en sus equipos locales.</p>
+                <p>Esto significa que la mayoría de las operaciones de Git se pueden lograr sin una conexión a internet.</p>
+                <p>Sin embargo GitHub es un servicio basado en la web que opera solamente en línea. Esto significa que necesitas estar conectado para hacer cualquier cosa en GitHub.</p>
+                <li>
+                    <h3><b>Git vs. GitHub - Creadores</b></h3>
+                </li>
+                <p>Linus Torvalds comenzó Git en Abril del 2005.</p>
+                <p>Chris Wanstrath, P.J. Hyett, Tom Preston-Werner, y Scott Chacon fundaron GitHub.com en Febrero 2008.</p>
+                <li>
+                    <h3><b>Git vs. GitHub - Soporte/mantenimiento</b></h3>
+                </li>
+                <p>En Julio 2005, Linux Torvalds entregó el mantenimiento de Git a junio C. Hamano - quien ha dado soporte a la plataforma desde entonces.</p>
+                <p>En Octubre 2018, Microsoft compró GitHub</p>
+                <li>
+                    <h3><b>Git vs. Github - Competidores</b></h3>
+                </li>
+                <p>Algunas alternativas populares para Git son Mercurial, Team Foundation Version control (TFVC), Perforce Helix Core, Apache Subversion, y IBM Rational ClearCase</p>
+                <p>Los competidores más cercanos a GitHub son <b>GitLab</b>, Bitbucket, SourceForge, Cloud Source Repositories, y AWS CodeCommit.</p>
+            </ol>
+            <div class="imagen">
+                <img src="./img/github.png" alt="Imagen de github">
+            </div>
+        </div>
+    </div>
 </body>
 
 
