--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <p> </p>
         </div>
         <div class="borde-a">
-            <p>Por ejemeplo:</p>
+            <p class="overline">Por ejemeplo:</p>
             <ul class="retangulo">
                 <li>
-                    <p>una rama -> una tarea</p>
+                    <p><span> una rama -> una tarea </span></p>
                 </li>
                 <li>
-                    <p>una rama -> un desarrollador</p>
+                    <p><span>una rama -> un desarrollador</span></p>
                 </li>
             </ul>
             <p>Básicamente, se puede pensar en Git como una aplicación de software pequeña que controla tu código base, si eres un desarrollador.</p>
