--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p> </p>
         </div>
         <div class="borde-a">
-            <p class="overline">Por ejemeplo:</p>
+            <p class="line">Por ejemeplo:</p>
             <ul class="retangulo">
                 <li>
                     <p><span> una rama -> una tarea </span></p>
